Rename gyroscope controls to motion controls

--- a/my-space-invaders.html
+++ b/my-space-invaders.html
@@ -385,15 +385,15 @@
       <LI>Also note that when the game is blurred, pan and zoom gestures are also enabled and when the game is active, a kebab menu button appears at the top of the screen. Opening this menu will blur the game.</LI>
     </UL>
     <P>
-      Gyroscope (tilting a mobile device):
+      Motion controls (tilting a mobile device with gyroscope):
     </P>
     <UL>
-      <LI>Tap this button to enable gyroscope controls (or disable them afterwards). This will disable touch screen controls. <BUTTON id="gyro-button" type="button">Enable gyroscope controls</BUTTON><DIV id="gyro-error"></DIV></DIV></LI>
+      <LI>Tap this button to enable motion controls (or disable them afterwards). This will disable touch screen controls. <BUTTON id="gyro-button" type="button">Enable motion controls</BUTTON><DIV id="gyro-error"></DIV></DIV></LI>
       <LI>Hold the device in front of you. Landscape orientation in fullscreen is recommended, but profile orientation and windowed mode are also supported. The device may stand upwards or may lay down with the screen facing upwards.</LI>
       <LI>Move the ship to the left by tilting the device leftwards (moving the left side of the device closer towards the ground than the right side).</LI>
       <LI>Move the ship to the right by tilting the device rightwards (moving the right side of the device closer towards the ground than the left side).</LI>
       <LI>Tap the game field to shoot a rocket.</LI>
-      <LI>Note that the edges of the screen remain reserved for pan and zoom gestures, so the touch reference doesn't activate there. This provides an escape hatch when zoomed in too much on the game.</LI>
+      <LI>Note that the edges of the screen remain reserved for pan and zoom gestures, so tapping the screen there doesn't shoot rockets. This provides an escape hatch when zoomed in too much on the game.</LI>
       <LI>Also note that when the game is blurred, pan and zoom gestures are also enabled and when the game is active, a kebab menu button appears at the top of the screen. Opening this menu will blur the game.</LI>
     </UL>
     <H2>Game description &amp; goal</H2>
